create class test for transport protocol parser and creator

--- a/IndigoBaseProtocol.vcxproj
+++ b/IndigoBaseProtocol.vcxproj
@@ -88,13 +88,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\main.c" />
+    <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Protocol\CommonLibEmPulse\BufferedFile.cpp" />
     <ClCompile Include="src\Protocol\CommonLibEmPulse\crc16.cpp" />
     <ClCompile Include="src\Protocol\CommonLibEmPulse\MemPack.cpp" />
     <ClCompile Include="src\Protocol\CommonLibEmPulse\StreamBuffer.cpp" />
-    <ClCompile Include="src\Protocol\TransportLevel\TransportLevelCreator.cpp" />
-    <ClCompile Include="src\Protocol\TransportLevel\TransportLevelParser.cpp" />
+    <ClCompile Include="src\Protocol\TransportLevel\TransportProtocolCreator.cpp" />
+    <ClCompile Include="src\Protocol\TransportLevel\TransportProtocollParser.cpp" />
+    <ClCompile Include="src\Test\TransportProtocolTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Protocol\Common.h" />
@@ -102,8 +103,9 @@
     <ClInclude Include="src\Protocol\CommonLibEmPulse\crc16.h" />
     <ClInclude Include="src\Protocol\CommonLibEmPulse\MemPack.h" />
     <ClInclude Include="src\Protocol\CommonLibEmPulse\StreamBuffer.h" />
-    <ClInclude Include="src\Protocol\TransportLevel\TransportLevelCreator.h" />
-    <ClInclude Include="src\Protocol\TransportLevel\TransportLevelParser.h" />
+    <ClInclude Include="src\Protocol\TransportLevel\TransportProtocolCreator.h" />
+    <ClInclude Include="src\Protocol\TransportLevel\TransportProtocollParser.h" />
+    <ClInclude Include="src\Test\TransportProtocolTest.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
