--- a/IndigoBaseProtocol.vcxproj.filters
+++ b/IndigoBaseProtocol.vcxproj.filters
@@ -16,51 +16,75 @@
     <Filter Include="Header Files\Common">
       <UniqueIdentifier>{d84ed11d-ac98-4823-b027-0da1a15b0e41}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Libs">
+      <UniqueIdentifier>{0be6491f-2bc0-4364-9a91-d3805045a163}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\TransportProtocol">
+      <UniqueIdentifier>{a6d14717-4b83-4de0-9aab-218a932c55ee}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Test">
+      <UniqueIdentifier>{4c8753d6-810e-4739-bcaa-af1c0f2b6c5c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Libs">
+      <UniqueIdentifier>{6ec23872-86cb-4918-83a5-a79b8e062ea2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\TransportProtocol">
+      <UniqueIdentifier>{0ce1bbc6-f7ef-440c-90ef-64eb147751cc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Test">
+      <UniqueIdentifier>{9d2a966b-598f-4c88-95ce-495e5a3d5ab4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\main.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Protocol\CommonLibEmPulse\StreamBuffer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Protocol\CommonLibEmPulse\BufferedFile.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Protocol\CommonLibEmPulse\crc16.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Protocol\TransportLevel\TransportLevelParser.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Protocol\TransportLevel\TransportLevelCreator.cpp">
+    <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Protocol\CommonLibEmPulse\MemPack.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Libs</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Protocol\CommonLibEmPulse\BufferedFile.cpp">
+      <Filter>Source Files\Libs</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Protocol\CommonLibEmPulse\crc16.cpp">
+      <Filter>Source Files\Libs</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Protocol\CommonLibEmPulse\StreamBuffer.cpp">
+      <Filter>Source Files\Libs</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Protocol\TransportLevel\TransportProtocollParser.cpp">
+      <Filter>Source Files\TransportProtocol</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Protocol\TransportLevel\TransportProtocolCreator.cpp">
+      <Filter>Source Files\TransportProtocol</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Test\TransportProtocolTest.cpp">
+      <Filter>Source Files\Test</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Protocol\Common.h">
       <Filter>Header Files\Common</Filter>
     </ClInclude>
-    <ClInclude Include="src\Protocol\CommonLibEmPulse\StreamBuffer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\Protocol\CommonLibEmPulse\BufferedFile.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Libs</Filter>
     </ClInclude>
     <ClInclude Include="src\Protocol\CommonLibEmPulse\crc16.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Protocol\TransportLevel\TransportLevelParser.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Protocol\TransportLevel\TransportLevelCreator.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Libs</Filter>
     </ClInclude>
     <ClInclude Include="src\Protocol\CommonLibEmPulse\MemPack.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Libs</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Protocol\CommonLibEmPulse\StreamBuffer.h">
+      <Filter>Header Files\Libs</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Protocol\TransportLevel\TransportProtocollParser.h">
+      <Filter>Header Files\TransportProtocol</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Protocol\TransportLevel\TransportProtocolCreator.h">
+      <Filter>Header Files\TransportProtocol</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Test\TransportProtocolTest.h">
+      <Filter>Header Files\Test</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
