--- a/IndigoBaseProtocol.vcxproj
+++ b/IndigoBaseProtocol.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Protocol\CommonLibEmPulse\BufferedFile.cpp" />
     <ClCompile Include="src\Protocol\CommonLibEmPulse\crc16.cpp" />
+    <ClCompile Include="src\Protocol\CommonLibEmPulse\IndigoTimer.cpp" />
     <ClCompile Include="src\Protocol\CommonLibEmPulse\MemPack.cpp" />
     <ClCompile Include="src\Protocol\CommonLibEmPulse\StreamBuffer.cpp" />
     <ClCompile Include="src\Protocol\TransportLevel\TransportProtocolCodec.cpp" />
@@ -102,6 +103,7 @@
     <ClInclude Include="src\Protocol\Common.h" />
     <ClInclude Include="src\Protocol\CommonLibEmPulse\BufferedFile.h" />
     <ClInclude Include="src\Protocol\CommonLibEmPulse\crc16.h" />
+    <ClInclude Include="src\Protocol\CommonLibEmPulse\IndigoTimer.h" />
     <ClInclude Include="src\Protocol\CommonLibEmPulse\MemPack.h" />
     <ClInclude Include="src\Protocol\CommonLibEmPulse\StreamBuffer.h" />
     <ClInclude Include="src\Protocol\TransportLevel\TransportProtocolCodec.h" />
